--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aura-css",
+  "name": "@linuxfandudeguy/aura-css",
   "version": "1.0.0",
   "description": "AuraCSS framework",
   "scripts": {
